--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,11 +6,11 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
     apt-get install -y icecast2 && \
-    apt-get -y autoclean; && \
+    apt-get -y autoclean && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
-    chown -R icecast2 /etc/icecast2; && \
-    chmod 777 /var/log/icecast2/access.log; && \
+    chown -R icecast2 /etc/icecast2 && \
+    chmod 777 /var/log/icecast2/access.log && \
     chmod 777 /var/log/icecast2/error.log
 
 
