--- a/.github/workflows/icecast-image.yml
+++ b/.github/workflows/icecast-image.yml
@@ -7,7 +7,7 @@ on:
 
 env:
     REGISTRY: ghcr.io
-    IMAGE_NAME: icecast2
+    IMAGE_NAME: kulturtelefon/icecast2
 
 jobs:
     build-and-push-image:
