--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,13 @@
-name: Build and Release
+name: Build and Release Binary
 
 on:
   push:
     tags:
       - 'v*' # Trigger on tags that start with 'v' (like v1.0.0)
+
+env:
+    REGISTRY: ghcr.io
+    IMAGE_NAME: ${{ github.actor }}/kulturtelefon-stream/stream-api
 
 jobs:
     test:
@@ -49,8 +53,6 @@ jobs:
           run: |
             cd src
             GOOS=linux GOARCH=arm64 go build -o ../releases/kulturtelefon-stream-linux-arm64
-        
-
     release:
         needs: [test, build]
         runs-on: ubuntu-latest
@@ -68,3 +70,40 @@ jobs:
             generate_release_notes: true
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    release-image:
+      needs: [test, build]
+      runs-on: ubuntu-latest
+      permissions:
+        contents: read
+        packages: write
+        attestations: write
+        id-token: write
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+
+        - name: Log in to the Container registry
+          uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+          with:
+            registry: ${{ env.REGISTRY }}
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
+        - name: Extract metadata (tags, labels) for Docker
+          id: meta
+          uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+          with:
+              images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        - name: Build and push Docker image
+          id: push
+          uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+          with:
+            context: docker/
+            push: true
+            tags: ${{ steps.meta.outputs.tags }}
+            labels: ${{ steps.meta.outputs.labels }}
+        - name: Generate artifact attestation
+          uses: actions/attest-build-provenance@v2
+          with:
+            subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+            subject-digest: ${{ steps.push.outputs.digest }}
+            push-to-registry: true
