--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,11 +53,30 @@ jobs:
           run: |
             cd src
             GOOS=linux GOARCH=arm64 go build -o ../releases/kulturtelefon-stream-linux-arm64
+        # Upload artifacts to make them available to the release job
+        - name: Upload build artifacts
+          uses: actions/upload-artifact@v3
+          with:
+            name: release-binaries
+            path: releases/
+            retention-days: 1
     release:
         needs: [test, build]
         runs-on: ubuntu-latest
-    
+        permissions:
+            contents: write
+            packages: write
         steps:
+        - name: Download build artifacts
+          uses: actions/download-artifact@v3
+          with:
+            name: release-binaries
+            path: releases/    
+        # Make binaries executable
+        - name: Make binaries executable
+          run: |
+            chmod +x releases/kulturtelefon-stream-linux-amd64
+            chmod +x releases/kulturtelefon-stream-linux-arm64
         - name: Create Release
           id: create_release
           uses: softprops/action-gh-release@v1
