Add Icecast Docker setup files and configuration

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
             name: release-binaries
             path: releases/
             retention-days: 1
-    release:
+    release-binaries:
         needs: [test, build]
         runs-on: ubuntu-latest
         permissions:
@@ -116,7 +116,7 @@ jobs:
           id: push
           uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
           with:
-            context: docker/
+            context: src/
             push: true
             tags: ${{ steps.meta.outputs.tags }}
             labels: ${{ steps.meta.outputs.labels }}
