--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -71,7 +71,7 @@ services:
     image: alpine
     restart: unless-stopped
     volumes:
-      - ./docker/logs:/logs
+      - /etc/stream-api/docker/logs:/logs
     command: |
       /bin/sh -c "apk add --no-cache logrotate && 
                   echo '/logs/*/*.log {\n  rotate 7\n  daily\n  compress\n  missingok\n  notifempty\n  create 644 root root\n}' > /etc/logrotate.conf && 
