runnig version of icecast container

--- a/icecast2/Dockerfile
+++ b/icecast2/Dockerfile
@@ -8,15 +8,15 @@ RUN apt-get update && \
     apt-get install -y icecast2 && \
     apt-get -y autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    chown -R icecast2 /etc/icecast2 
-
+    rm -rf /var/lib/apt/lists/*
 
 
 COPY icecast.xml /etc/icecast2/icecast.xml
 COPY startup.sh /startup.sh
 
-RUN chmod +x /startup.sh 
+RUN chmod +x /startup.sh
+
+RUN chown -R icecast2 /etc/icecast2
 
 CMD ["/startup.sh"]
 EXPOSE 8000
