--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -70,11 +70,55 @@ services:
     image: alpine
     restart: unless-stopped
     volumes:
-      - /etc/stream-api/docker/logs:/logs
+    - /etc/stream-api/docker/logs:/logs
     command: |
-      /bin/sh -c "apk add --no-cache logrotate && 
-                  echo '/logs/*/*.log {\n  rotate 7\n  daily\n  compress\n  missingok\n  notifempty\n  create 644 root root\n}' > /etc/logrotate.conf && 
-                  while true; do logrotate /etc/logrotate.conf; sleep 86400; done"
+      /bin/sh -c "
+      apk add --no-cache logrotate &&
+      cat > /etc/logrotate.conf << 'EOF'
+      /logs/nginx/*.log {
+        rotate 7
+        daily
+        compress
+        missingok
+        notifempty
+        create 644 root root
+        postrotate
+          /bin/kill -USR1 \$(cat /var/run/nginx.pid 2>/dev/null) 2>/dev/null || true
+        endscript
+      }
+
+      /logs/icecast/*.log {
+        rotate 7
+        daily
+        compress
+        missingok
+        notifempty
+        create 644 root root
+      }
+
+      /logs/stream-api/*.log {
+        rotate 7
+        daily
+        compress
+        missingok
+        notifempty
+        create 644 root root
+      }
+
+      /logs/certbot/*.log {
+        rotate 7
+        daily
+        compress
+        missingok
+        notifempty
+        create 644 root root
+      }
+      EOF
+      while true; do
+        logrotate /etc/logrotate.conf
+        sleep 86400
+      done
+      "
 
 networks:
   icecast-net:
