adding logging to stram-api

--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -27,6 +27,12 @@ services:
       - STREAM_API_PORT=8080
       - CONFIG_PATH=/app/config/stream.config
       - LOG_LEVEL=info
+    logging:
+      driver: "local"
+      options:
+        max-size: "10m"
+        max-file: "3"
+        path: "/etc/stream-api/docker/logs/stream-api"
     networks:
       - icecast-net
   
@@ -55,16 +61,6 @@ services:
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     networks:
       - icecast-net
-  
-  stream-api-logger:
-    image: alpine
-    restart: unless-stopped
-    volumes:
-      - /etc/stream-api/docker/logs/stream-api:/var/logs/stream-api
-    command: |
-      /bin/sh -c "mkdir -p /var/logs/stream-api && 
-                  tail -f /proc/1/fd/1 > /var/logs/stream-api/application.log"
-    pid: "service:stream-api"
 
   log-rotator:
     image: alpine
